@@ -15,13 +15,6 @@ None
 
 Priority 2 (nice to have)
 -------------------------
-- [#70] Instead of directly exposing apr_md5_init(), apr_md5_update() and
-  apr_md5_final(), python-aprmd5 should behave similar to the Python Standard
-  Library's hashlib module:
-    1) Generate an md5 object (corresponds to calling apr_md5_init())
-    2) Calling update() on the object (corresponds to calling apr_md5_update())
-    3) Calling digest() on the object (corresponds to calling apr_md5_final())
-    4) As a convenience, provide a hexdigest() method
 - [#71] setup.py should auto-detect the platform that it is running on, i.e. it
   should not be necessary to manually edit setup.py to make platform-specific
   changes (autoconf?)
